<resources>
    <string name="app_name">Project_2</string>


    <string name="mainSubmitButton">Submit</string>
    <string name="no_logs_message">No Logs yet!.</string>
    <string name="logout">Logout?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="mainDescriptionHint">Main description</string>
    <string name="mainQuantityHint">Enter Quantity</string>
    <string name="mainPriceHint">Enter Price</string>
    <string name="title_activity_main2">MainActivity2</string>

    <string name="new_username">Enter new username</string>
    <string name="new_password">Enter new password</string>
    <string name="user_id">Enter User ID</string>
    <string name="enter_user_id_to_remove">Enter user ID to remove</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="enter_price">Enter Price</string>

    <string name="Back">Return</string>
    <string name="remove_user">Remove User</string>
    <string name="admin">Admin</string>
    <string name="back">Return</string>
    <string name="delete_items">Delete Items</string>
    <string name="view_users">View Users</string>
    <string name="view_items">View Items</string>
    <string name="add_items">Add Items</string>
    <string name="welcome_admin">Welcome Admin!</string>
    <string name="add_replace_items">Add/Replace Items</string>
    <string name="view_delete_users">view/delete users</string>
    <string name="enter_item_number_to_remove">Enter item number to remove</string>
    <string name="remove_item">Remove Item</string>
    <string name="buy">Buy</string>
    <string name="order_history">Order History</string>
    <string name="choose_color">Choose Color:</string>
    <string name="description">Description</string>
    <string name="quantity">Quantity</string>
    <string name="list_items">List Items</string>
    <string name="price">Price</string>
    <string name="id">ID</string>


    <string-array name="colors">
        <item>Red widget</item>
        <item>Orange widget</item>
        <item>Yellow widget</item>
        <item>Green widget</item>
        <item>Blue widget</item>
        <item>Violet widget</item>
        <item>White widget</item>
        <item>Black widget</item>
    </string-array>

    <string-array name="numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="how_many_did_you_want_to_buy">How many did you want to buy?</string>
    <string name="buy_quantity_field">Buy Quantity Field</string>
</resources>