<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:backgroundTint="#B67373">

        <ImageView
            android:id="@+id/widget"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="2dp"
            app:srcCompat="@drawable/widget" />

        <TextView
            android:id="@+id/Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Description"
            android:layout_marginStart="50dp"
            android:layout_marginTop="3dp"
            android:text="@string/quantity"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/Price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Description"
            android:layout_marginStart="50dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@id/Quantity"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Description"
            android:layout_marginStart="50dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@id/Price"
            android:text="@string/id"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </RelativeLayout>


</androidx.cardview.widget.CardView>